--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,29 @@ body {
     background-color: rgb(25, 25, 25);
     color: white;
     font-family: arial;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
+
+.main {
+    background-color: rgb(50, 50, 50);
+    padding: 20px;
+    text-align: center;
+}
+
 .title {
     font-size: 30px;
     font-weight: bold;
+    text-align: center;
 }
-.move-icon{
+
+.move-icon {
     height: 50px;
 }
-.move-button{
+
+.move-button {
     background-color: transparent;
     border: 3px solid white;
     border-radius: 50%;
@@ -18,16 +32,21 @@ body {
     height: 120px;
     margin-right: 10px;
 }
-.result{
+
+.result {
     font-size: 25px;
     font-weight: bold;
     margin-top: 50px;
+    text-align: center; 
 }
-.score{
+
+
+.score {
     margin-top: 60px;
 }
+
 .reset-score-button,
-.auto-play-button{
+.auto-play-button {
     background-color: white;
     border: none;
     font-size: 15px;
@@ -35,15 +54,15 @@ body {
     cursor: pointer;
 }
 
-.auto-play-button{
+.auto-play-button {
     margin-left: 10px;
 }
 
-.confirmation-box{
+.confirmation-box {
     margin-top: 18px;
 }
 
-.confirmation-button{
+.confirmation-button {
     padding: 6px 18px;
     font-size: 15px;
     cursor: pointer;
