--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-    background-color: rgb(25, 25, 25);
-    color: white;
+    background-color: #1a1a1a;
+    color: #ffffff;
     font-family: arial;
     display: flex;
     justify-content: center;
@@ -9,7 +9,7 @@ body {
 }
 
 .main {
-    background-color: rgb(50, 50, 50);
+    background-color: #333333;
     padding: 20px;
     text-align: center;
 }
@@ -26,7 +26,7 @@ body {
 
 .move-button {
     background-color: transparent;
-    border: 3px solid white;
+    border: 3px solid #ffffff;
     border-radius: 50%;
     width: 120px;
     height: 120px;
@@ -40,14 +40,13 @@ body {
     text-align: center; 
 }
 
-
 .score {
     margin-top: 60px;
 }
 
 .reset-score-button,
 .auto-play-button {
-    background-color: white;
+    background-color: #ffffff;
     border: none;
     font-size: 15px;
     padding: 8px 15px;
